# Tennis_Scores_Predictions

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
notebooks/: data_description.ipynb  data_dictionary.md  data_eda.ipynb  features_engineering.ipynb  random_forest_trainig.ipynb
scripts/: ingest_data.py
src/tennis_scores_predictions/: __init__.py  __main__.py  settings.py
src/tennis_scores_predictions/pipelines/: __init__.py
src/tennis_scores_predictions/pipelines/automl_training/: nodes.py  pipeline.py
src/tennis_scores_predictions/pipelines/data_processing/: nodes.py  pipeline.py
src/tennis_scores_predictions/pipelines/model_training/: nodes.py  pipeline.py
