[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "tennis_scores_predictions"
readme = "README.md"
dynamic = [
    "version",
]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.2.0",
    "kedro-datasets[pandas]>=3.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.4",
]

[project.scripts]
tennis-scores-predictions = "tennis_scores_predictions.__main__:main"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "tennis_scores_predictions.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.kedro]
package_name = "tennis_scores_predictions"
project_name = "tennis_scores_predictions"
kedro_init_version = "1.2.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.kedro_telemetry]
project_id = "df1e15396c4b41fbb6e2988565e04488"
